Update security and configuration files