@@ -1,11 +1,9 @@
 package com.projectmanage.main.config;
 
 import java.util.Arrays;
-import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.web.SecurityFilterChain;
@@ -14,6 +12,7 @@ import org.springframework.security.web.authentication.SimpleUrlAuthenticationSu
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 
 import com.projectmanage.main.service.CustomOAuth2UserService;
 
@@ -32,6 +31,9 @@ public class SecurityConfig {
         SimpleUrlAuthenticationSuccessHandler handler = new SimpleUrlAuthenticationSuccessHandler();
         handler.setRedirectStrategy((request, response, url) -> {
             response.sendRedirect("http://localhost:5173");
+            // Set cookies with SameSite=None for cross-domain authentication
+            response.addHeader("Set-Cookie", "JSESSIONID=" + request.getSession().getId() +
+                    "; Path=/; HttpOnly; SameSite=None; Secure");
         });
         return handler;
     }
@@ -39,10 +41,10 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
-                .cors(Customizer.withDefaults())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/api/auth/**", "/oauth2/**", "/login/oauth2/code/**").permitAll()
                         .anyRequest().authenticated())
                 .oauth2Login(oauth2 -> oauth2
                         .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
@@ -59,15 +61,46 @@ public class SecurityConfig {
     }
 
     @Bean
+    public CorsFilter corsFilter() {
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowCredentials(true);
+        config.addAllowedOrigin("http://localhost:5173");
+        config.addAllowedOrigin("https://accounts.google.com");
+        config.addAllowedHeader("*");
+        config.addAllowedMethod("*");
+        config.setMaxAge(3600L);
+        source.registerCorsConfiguration("/**", config);
+        return new CorsFilter(source);
+    }
+
+    @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173")); // React dev server
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "https://accounts.google.com")); // React
+                                                                                                                // dev
+                                                                                                                // server
+                                                                                                                // and
+                                                                                                                // Google
+                                                                                                                // OAuth
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+        configuration.setAllowedHeaders(
+                Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Set-Cookie"));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
+
+        // Add specific configuration for Google OAuth endpoints
+        CorsConfiguration googleOAuthConfig = new CorsConfiguration();
+        googleOAuthConfig.setAllowedOrigins(Arrays.asList("*")); // Allow all origins for OAuth redirects
+        googleOAuthConfig.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS"));
+        googleOAuthConfig.setAllowedHeaders(Arrays.asList("*"));
+        googleOAuthConfig.setAllowCredentials(false); // No credentials for third-party domains
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/oauth2/**", googleOAuthConfig);
+        source.registerCorsConfiguration("/login/oauth2/code/**", googleOAuthConfig);
         return source;
     }
 }
